pom.xml : cette fois jai bien configurer Jib et ca build bien pour creer limage docker, sauf que ca run pas acause de non connection avec limage docker de la bd postgres