@@ -117,9 +117,8 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>23</source>
-                    <target>23</target>
-                    <compilerArgs>--enable-preview</compilerArgs>
+                    <source>21</source>
+                    <target>21</target>
                 </configuration>
             </plugin>
 
@@ -147,7 +146,7 @@
 			<plugin>
 				<groupId>com.google.cloud.tools</groupId>
 				<artifactId>jib-maven-plugin</artifactId>
-				<version>3.4.0</version>
+				<version>3.4.5</version>
 				<configuration>
 					<from>
 						<image>eclipse-temurin:21-jre-alpine</image>
@@ -163,13 +162,13 @@
 						</platforms>
 					</from>
 						<to>
-							<image>docker.io/${docker.username}/${project.artifactId}:${project.version}</image>
+							<image>docker.io/${docker.username}/${project.artifactId}</image>
 							<tags>
 								<name>latest</name>
 							</tags>
 						</to>
 					<container>
-						<mainClass>com.amigoscode.AmigoscodeApiApplication</mainClass>
+						<mainClass>com.amigoscode.Main</mainClass>
 					</container>
 				</configuration>
 			</plugin>
